# bgp-explorer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mcp-test-campaign-2026-02-07.html  pyproject.toml
.github/workflows/: test.yml
scripts/: test_ai_reasoning.py
specs/: implementation-plan.md
src/bgp_explorer/: __init__.py  agent.py  cli.py  config.py  mcp_server.py  output.py
src/bgp_explorer/ai/: __init__.py  base.py  claude.py  gemini.py  oauth.py  prompt_builder.py  tools.py
src/bgp_explorer/analysis/: __init__.py  as_analysis.py  aspa_validation.py  compliance.py  manrs_conformance.py  path_analysis.py  resilience.py  rov_coverage.py  stability.py
src/bgp_explorer/cache/: __init__.py  ttl_cache.py
src/bgp_explorer/data/: __init__.py  ddos_providers.py  rov_enforcers.py
src/bgp_explorer/models/: __init__.py  as_relationship.py  (+6 more)
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_mcp_consolidated.py  test_mcp_server.py  test_output.py
tests/test_ai/: test_base.py  test_claude.py  test_gemini.py  test_prompt_builder.py  test_tools.py  test_tools_enhanced.py
tests/test_analysis/: test_as_analysis.py  test_aspa_validation.py  test_compliance.py  test_manrs_conformance.py  test_path_analysis.py  test_resilience.py  test_rov_coverage.py  test_stability.py
tests/test_cache/: test_ttl_cache.py
tests/test_models/: test_as_relationship.py  test_event.py  test_ixp.py  test_manrs.py  test_route.py
tests/test_sources/: test_apnic_rov.py  test_bgp_radar.py  test_bgpstream.py  test_globalping.py  test_ixp_looking_glass.py  test_manrs.py  test_monocle.py  test_peeringdb.py  test_ripe_stat.py  test_ripe_stat_updates.py  test_routeviews.py  test_rpki_console.py
(+14 files in other folders)
